--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "1.0.0",
   "description": "처음 해보는 nodejs",
   "main": "main.js",
-  `"scripts": {
+  "scripts": {
     "cowsay": "node cowsay.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lodash": "node lodash.js",
     "dev": "nodemon --watch *.js --exec npm run cowsay"
-  },`
+  },
   "author": "CSJ",
   "license": "ISC",
   "dependencies": {
     "cowsay": "^1.5.0",
+    "dotenv": "^16.0.2",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
